# reappraisal-model

./: .bashrc  .gitignore  0320_liwcselect.ipynb  LDH_Task_LD_LF_121219.xlsx  LDH_Task_LD_LF_121219_process.ipynb  Makefile  Pipfile  README.md  SentimentClassifier.py  Untitled-2.ipynb  environment.yml  example.env  index.html  index.ipynb  main.ipynb  poetry.toml  processed_LDH_121219.csv  procs.ipynb  profileResults  pyproject.toml  reappDataLoader.py  requirements.txt  runUtils.py  settings.ini  setup.sh  study1full_scored_far.csv  study1full_scored_obj.csv  study1subset_scored_far.csv  study1subset_scored_obj.csv  ten_percent_set1.csv  test_notes_0304.txt  test_set.csv
.ipynb_checkpoints/: .gitignore-checkpoint  procs-checkpoint.ipynb  requirements-checkpoint.txt
LDCM vs. Algorithms/: LDHII_PerformanceResults_Github.csv  README
data/: Master_Final_TrainingData.csv
docs/: LDHData.html  LightningReapp.html  Trainers.html  Tuner.html  _config.yml  index.html  procs.html  sidebar.json  utils.html
eval/: Alg_Far_NEW.xlsx  Alg_Obj_NEW.xlsx  data_test_example.csv  data_test_fixed.csv  data_train_example.csv  data_train_fixed.csv
input/: Data Pipeline.ipynb  LDHDataset.py  task1join.csv  task4join.csv
model/: ModelLoader.py  __init__.py  __main__.py  data_process.py  reappraisal.py  tempCodeRunnerFile.py  utils.py
model_old/: README.md  reappraisal.py
nbs/: LDHData.ipynb  LightningReapp.ipynb  Trainers.ipynb  Tuner.ipynb  Untitled.ipynb  analysis.ipynb  index.ipynb  procs.ipynb  reappraisalmodel  utils.ipynb
noarch/: index.html
reappraisalmodel/: _nbdev.py  (+5 more)
(+298 files in other folders)
