[tool.poetry]
name = "reapp"
version = "0.1.0"
description = ""
authors = ["Daniel Pham <28274722+danielcpham@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.7.1"
transformers = "^4.2.2"
datasets = "^1.2.1"
numpy = "1.18.0"
pandas = "^1.2.1"
jupyter = "^1.0.0"
jupyterlab = "^3.0.6"
openpyxl = "^3.0.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pylint = "^2.6.0"


[build-system]
requires = ["poetry-core>=1.0.0a6", "setuptools>=46.0.0"]
build-backend = "poetry.core.masonry.api"
