[tool.poetry]
name = "reapp"
version = "0.1.0"
description = ""
authors = ["Daniel Pham <28274722+danielcpham@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.7.1"
transformers = "^4.2.2"
datasets = "^1.2.1"
numpy = "1.18.0"
pandas = "^1.2.1"
jupyter = "^1.0.0"
jupyterlab = "^3.0.6"
openpyxl = "^3.0.6"
nltk = "^3.5"
pytest-mock = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pylint = "^2.6.0"
pylama = "^7.7.1"
pytest-mock = "^3.5.1"
pytest-cov = "^2.11.1"
optuna = "^2.5.0"


[build-system]
requires = ["poetry-core>=1.0.0a6", "setuptools>=46.0.0"]
build-backend = "poetry.core.masonry.api"
